@@ -1,5 +1,6 @@
 package com.warehouse.delivery.domain.port.primary;
 
+import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
@@ -8,13 +9,12 @@ import java.util.stream.Collectors;
 import com.warehouse.delivery.domain.model.Delivery;
 import com.warehouse.delivery.domain.model.DeliveryRequest;
 import com.warehouse.delivery.domain.model.DeliveryResponse;
-import com.warehouse.delivery.domain.model.DeliveryRouteRequest;
 import com.warehouse.delivery.domain.port.secondary.ParcelStatusControlChangeServicePort;
-import com.warehouse.delivery.domain.port.secondary.RouteLogServicePort;
+import com.warehouse.delivery.domain.port.secondary.RouteLogDeliveryStatusServicePort;
 import com.warehouse.delivery.domain.service.DeliveryService;
-
 import com.warehouse.delivery.domain.vo.UpdateStatusParcelRequest;
 import com.warehouse.delivery.infrastructure.adapter.secondary.api.UpdateStatus;
+
 import lombok.AllArgsConstructor;
 
 @AllArgsConstructor
@@ -22,7 +22,7 @@ public class DeliveryPortImpl implements DeliveryPort {
 
     private final DeliveryService deliveryService;
 
-    private final RouteLogServicePort logServicePort;
+    private final RouteLogDeliveryStatusServicePort logServicePort;
     
     private final ParcelStatusControlChangeServicePort parcelStatusControlChangeServicePort;
 
@@ -34,47 +34,31 @@ public class DeliveryPortImpl implements DeliveryPort {
                 .collect(Collectors.toSet());
 
         final List<Delivery> signedDeliveries = deliveryService.save(deliveryRequests);
+        
+        updateParcelStatus(signedDeliveries);
 
         registerDeliveryRoute(signedDeliveries);
-
-        final List<DeliveryResponse> deliveryResponses = signedDeliveries.stream()
+        
+        return signedDeliveries
+                .stream()
                 .map(this::mapToResponse)
-                .toList();
-        
-        updateParcelStatus(deliveryResponses);
-        
-        return deliveryResponses;
+                .collect(Collectors.toList());
     }
 
     private void registerDeliveryRoute(List<Delivery> signedDeliveries) {
-        final Set<DeliveryRouteRequest> deliveryRouteRequests = signedDeliveries.stream()
-                .map(this::mapToDeliveryRouteRequest)
-                .collect(Collectors.toSet());
-
-        //logServicePort.deliver(deliveryRouteRequests);
+        logServicePort.deliver(new HashSet<>(signedDeliveries));
     }
     
-    private void updateParcelStatus(List<DeliveryResponse> deliveryResponses) {
-        deliveryResponses.forEach(this::updateParcelStatus);
+    private void updateParcelStatus(List<Delivery> signedDeliveries) {
+        signedDeliveries.forEach(this::updateParcelStatus);
     }
     
-    private void updateParcelStatus(DeliveryResponse deliveryResponse) {
+    private void updateParcelStatus(Delivery delivery) {
 		final UpdateStatus updateStatus = parcelStatusControlChangeServicePort
-				.updateParcelStatus(new UpdateStatusParcelRequest(deliveryResponse.getParcelId()));
-        
-        deliveryResponse.updateStatus(updateStatus);
+				.updateParcelStatus(new UpdateStatusParcelRequest(delivery.getParcelId()));
 
-    }
+        delivery.updateStatus(updateStatus);
 
-    private DeliveryRouteRequest mapToDeliveryRouteRequest(Delivery delivery) {
-        return DeliveryRouteRequest.builder()
-                .id(delivery.getId())
-                .parcelId(delivery.getParcelId())
-                .deliveryStatus(delivery.getDeliveryStatus())
-                .depotCode(delivery.getDepotCode())
-                .supplierCode(delivery.getSupplierCode())
-                .token(delivery.getToken())
-                .build();
     }
 
     private DeliveryResponse mapToResponse(Delivery delivery) {
