@@ -2,14 +2,11 @@ package com.warehouse.delivery;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.Mockito.doReturn;
+import static org.mockito.Mockito.when;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.Set;
 import java.util.UUID;
 
-import com.warehouse.delivery.domain.port.secondary.ParcelStatusControlChangeServicePort;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -21,71 +18,102 @@ import com.warehouse.delivery.domain.model.Delivery;
 import com.warehouse.delivery.domain.model.DeliveryRequest;
 import com.warehouse.delivery.domain.model.DeliveryResponse;
 import com.warehouse.delivery.domain.port.primary.DeliveryPortImpl;
-import com.warehouse.delivery.domain.port.secondary.RouteLogServicePort;
+import com.warehouse.delivery.domain.port.secondary.DeliveryRepository;
+import com.warehouse.delivery.domain.port.secondary.DeliveryTokenServicePort;
+import com.warehouse.delivery.domain.port.secondary.ParcelStatusControlChangeServicePort;
+import com.warehouse.delivery.domain.port.secondary.RouteLogDeliveryStatusServicePort;
 import com.warehouse.delivery.domain.service.DeliveryService;
+import com.warehouse.delivery.domain.service.DeliveryServiceImpl;
+import com.warehouse.delivery.domain.vo.*;
+import com.warehouse.delivery.infrastructure.adapter.secondary.api.UpdateStatus;
 
 @ExtendWith(MockitoExtension.class)
 public class DeliveryPortImplTest {
 
+	@Mock
+	private RouteLogDeliveryStatusServicePort logServicePort;
 
-    @Mock
-    private DeliveryService deliveryService;
+	@Mock
+	private ParcelStatusControlChangeServicePort parcelStatusControlChangeServicePort;
 
-    @Mock
-    private RouteLogServicePort logServicePort;
+	@Mock
+	private DeliveryRepository deliveryRepository;
 
-    @Mock
-    private ParcelStatusControlChangeServicePort parcelStatusControlChangeServicePort;
+	@Mock
+	private DeliveryTokenServicePort deliveryTokenServicePort;
 
-    private DeliveryPortImpl deliveryPort;
+	private DeliveryPortImpl deliveryPort;
 
-    private static final String DELIVERY_ID = "053e792f-6201-4365-a87a-f16e7f34b978";
+	private DeliveryService deliveryService;
 
-    @BeforeEach
-    void setup() {
-        deliveryPort = new DeliveryPortImpl(deliveryService, logServicePort, parcelStatusControlChangeServicePort);
-    }
+	private static final String DELIVERY_ID = "053e792f-6201-4365-a87a-f16e7f34b978";
 
-    @Test
-    void shouldDeliver() {
-        // given
-        final Set<DeliveryRequest> deliveryRequestSet = Set.of(createDeliveryRequest());
-        final List<Delivery> delivery = Collections.singletonList(createDelivery());
+	@BeforeEach
+	void setup() {
+		deliveryService = new DeliveryServiceImpl(deliveryRepository, deliveryTokenServicePort);
+		deliveryPort = new DeliveryPortImpl(deliveryService, logServicePort, parcelStatusControlChangeServicePort);
+	}
 
-        final Delivery updatedDelivery = createDelivery();
-        updatedDelivery.setId(UUID.fromString(DELIVERY_ID));
-        updatedDelivery.setParcelId(1L);
+	@Test
+	void shouldDeliver() {
+		// given
+		final String supplierCode = "abc";
+		final DeliveryRequest deliveryRequestSet = createDeliveryRequest();
+		final List<DeliveryPackageRequest> deliveryPackageRequests = createDeliveryPackageRequests("KT1",
+				DeliveryStatus.DELIVERY, 1L);
+		final Supplier supplier = createSupplier(supplierCode);
+		final DeliveryTokenRequest deliveryTokenRequest = DeliveryTokenRequest.builder()
+				.deliveryPackageRequests(deliveryPackageRequests).supplier(supplier).build();
 
-        doReturn(Collections.singletonList(updatedDelivery))
-                .when(deliveryService)
-                .save(deliveryRequestSet);
+		final DeliveryTokenResponse deliveryTokenResponse = createDeliveryTokenResponse(supplierCode,
+				List.of(buildSupplierSignature("123", 1L)));
 
-        // when
-        final List<DeliveryResponse> deliveries = deliveryPort.deliver(deliveryRequestSet.stream().toList());
-        // then
-        assertThat(deliveries.size()).isEqualTo(1);
-        final UUID id = deliveries.stream().map(DeliveryResponse::getId).findAny().orElse(null);
-        assertEquals(expectedToBe(UUID.fromString(DELIVERY_ID)), id);
-    }
+		final Delivery updatedDelivery = createDelivery();
+		updatedDelivery.setId(UUID.fromString(DELIVERY_ID));
 
-    private Delivery createDelivery() {
-        return Delivery.builder()
-                .deliveryStatus(DeliveryStatus.DELIVERY)
-                .depotCode("KT1")
-                .supplierCode("abc_def")
-                .parcelId(1L)
-                .build();
-    }
+		when(deliveryRepository.saveDelivery(deliveryRequestSet)).thenReturn(updatedDelivery);
+		when(deliveryTokenServicePort.protect(deliveryTokenRequest)).thenReturn(deliveryTokenResponse);
+		when(parcelStatusControlChangeServicePort.updateParcelStatus(new UpdateStatusParcelRequest(1L)))
+				.thenReturn(UpdateStatus.OK);
 
-    private DeliveryRequest createDeliveryRequest() {
-        return DeliveryRequest.builder()
-                .depotCode("KT1")
-                .supplierCode("abc_def")
-                .parcelId(1L)
-                .build();
-    }
+		// when
+		final List<DeliveryResponse> deliveries = deliveryPort.deliver(List.of(deliveryRequestSet));
+		// then
+		assertThat(deliveries).size().isEqualTo(1);
+		final UUID id = deliveries.stream().map(DeliveryResponse::getId).findAny().orElse(null);
+		assertEquals(expectedToBe(UUID.fromString(DELIVERY_ID)), id);
+	}
 
-    private <T> T expectedToBe(T t) {
-        return t;
-    }
+	private SupplierSignature buildSupplierSignature(final String token, final Long parcelId) {
+		return SupplierSignature.builder().deliveryId(UUID.fromString(DELIVERY_ID)).token(token).parcelId(parcelId)
+				.build();
+	}
+
+	private DeliveryTokenResponse createDeliveryTokenResponse(final String supplierCode,
+			final List<SupplierSignature> supplierSignatures) {
+		return DeliveryTokenResponse.builder().supplierCode(supplierCode).supplierSignature(supplierSignatures).build();
+	}
+
+	private Supplier createSupplier(final String supplierCode) {
+		return new Supplier(supplierCode);
+	}
+
+	private List<DeliveryPackageRequest> createDeliveryPackageRequests(final String depotCode,
+			final DeliveryStatus deliveryStatus, final Long parcelId) {
+		return List.of(DeliveryPackageRequest.builder().delivery(DeliveryInformation.builder().parcelId(parcelId)
+				.deliveryStatus(deliveryStatus).depotCode(depotCode).build()).build());
+	}
+
+	private Delivery createDelivery() {
+		return Delivery.builder().deliveryStatus(DeliveryStatus.DELIVERY).depotCode("KT1").supplierCode("abc")
+				.parcelId(1L).build();
+	}
+
+	private DeliveryRequest createDeliveryRequest() {
+		return DeliveryRequest.builder().depotCode("KT1").supplierCode("abc").parcelId(1L).build();
+	}
+
+	private <T> T expectedToBe(T t) {
+		return t;
+	}
 }
